<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/friend_button"
                android:icon="@mipmap/ic_launcher_round"
                android:title="Friend"></item>
            <item
                android:id="@+id/friend_request"
                android:icon="@mipmap/ic_launcher_round"
                android:title="Friend request"></item>
            <item
                android:id="@+id/Question_propose_button"
                android:icon="@mipmap/ic_launcher_round"
                android:title="@string/question_propose"></item>
            <item
                android:id="@+id/settings_button"
                android:icon="@mipmap/ic_launcher_round"
                android:title="@string/Settings"></item>
            <item
                android:id="@+id/help_button"
                android:icon="@mipmap/ic_launcher_round"
                android:title="Help"></item>
            <item
                android:id="@+id/user_logout_button"
                android:icon="@mipmap/ic_launcher_round"
                android:title="@string/logout"></item>
            <item
                android:id="@+id/history"
                android:icon="@mipmap/ic_launcher_round"
                android:title="My history"></item>
            <item
                android:id="@+id/learder_board"
                android:icon="@mipmap/ic_launcher_round"
                android:title="Learder board"></item>
        </group>
</menu>